--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="container-navar">
-  <app-navar></app-navar>
+  <router-outlet></router-outlet>
 </section>
 
-<section class="containerFrontpage">
+<!-- <section class="containerFrontpage">
   <app-frontpage></app-frontpage>
-</section>
+</section> -->
