--- a/src/app/components/frontpage/frontpage.component.scss
+++ b/src/app/components/frontpage/frontpage.component.scss
@@ -27,7 +27,7 @@
 
 .info{
 
-  height: 95%;
+  height: 85%;
   width: 95%;
 
   background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(217, 217, 217, 0.45) 50%, rgba(217, 217, 217, 0) 100%);
@@ -37,5 +37,17 @@
 
   border-radius: 67px;
 
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin-top: 100px !important;
+  margin: 21px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
 }
