--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -5,8 +5,19 @@
       <div class="sky1"></div>
       <div class="sky2"></div>
     </section>
-    <section class="info">
-      <h1>hola</h1>
+    <section class="contianerInfo">
+      <section class="info">
+        <section class="infoEdit">
+          <h1 class="title">CONTINENTE DE AMERICA</h1>
+          <P class="description"> Buscamos el <strong>conocer, demostrar y difundir la historia de america,</strong> gracias a los grupos de investigacion de <strong>MEUM.</strong></P>
+          <p class="frase" >
+            <strong>“EL PASADO ES LA PIEZA CLAVE PARA ENTENDER EL PRESENTE Y LLEGAR AL FUTURO”</strong>
+          </p>
+        </section>
+      </section>
+      <section class="containerImgEarth" >
+        <img class="imgEarth" src="./assets/img/tierra.png" alt="">
+      </section>
     </section>
   </section>
 
