--- a/src/app/components/frontpage/frontpage.component.scss
+++ b/src/app/components/frontpage/frontpage.component.scss
@@ -1,3 +1,10 @@
+.containerfront{
+  overflow-x: hidden;
+
+  display: flex;
+  flex-direction: column;
+}
+
 .sky{
   width: 100%;
   height: 88vh;
@@ -21,13 +28,13 @@
   transform: rotate(180deg);
 
   position: absolute;
-  bottom: -1px;
+  bottom: -2px;
 }
 
+//info
+.contianerInfo{
 
-.info{
-
-  height: 85%;
+  height: 80%;
   width: 95%;
 
   background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(217, 217, 217, 0.45) 50%, rgba(217, 217, 217, 0) 100%);
@@ -38,16 +45,37 @@
   border-radius: 67px;
 
   position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  margin-top: 100px !important;
-  margin: 21px;
+  right: 35px;
+  top: 100px;
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
+
+.imgEarth{
+  width: 600px;
+  height: 500px;
+}
+
+.infoEdit{
+  width: 600px;
+  margin-left: 50px;
+}
+
+.title{
+  font-size: 45px;
+  margin-bottom: 20px;
+}
+
+.description{
+  font-size: 25px;
+  margin-bottom: 40px;
+}
+
+.frase{
+  font-size: 28px;
 }
